Adapt to the new ProtocolMessage model.